# ImgSearch

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  pytest.ini
.github/workflows/: publish.yml
src/ifinder/: __init__.py  __main__.py  client.py  clip.py  cmd.py  consts.py  daemon.py  server.py  service.py  storage.py  utils.py
src/imgsearch/: __main__.py  client.py  clip.py  config.py  consts.py  exceptions.py  server.py  setup.py  storage.py  utils.py
src/pixa/: __main__.py  client.py  clip.py  consts.py  server.py  storage.py  utils.py
src/test/: test_clip.py  test_clip_base.py  test_clip_feature.py  test_storage.py  test_utils.py
src/tinyclip/: clip_soft_loss.py  factory.py  imagenet_zeroshot_data.py  l0module.py  loss.py  model.py  openai.py  pretrained.py  timm_model.py  tokenizer.py  transform.py  utils.py  weight_inherit.py
src/tinyclip/model_configs/: RN50.json  TinyCLIP-ResNet-19M-Text-19M.json  TinyCLIP-ResNet-30M-Text-29M.json  TinyCLIP-ViT-39M-16-Text-19M.json  TinyCLIP-ViT-40M-32-Text-19M.json  TinyCLIP-ViT-61M-32-Text-29M.json  TinyCLIP-ViT-8M-16-Text-3M.json  TinyCLIP-auto-ViT-22M-32-Text-10M.json
tests/: create_test_images.py  test_basic.py
